<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">POS</string>
    <string name="print_display">Display Mode</string>
    <string name="print_text">Print Text</string>
    <string name="print_english">Print English</string>
    <string name="print_char">Print Char</string>
    <string name="print_picture">Print Picture</string>
    <string name="print_qrcode">Print QRcode</string>
    <string name="print_barcode">Print Barcode</string>
    <string name="print_self_check">Print Self Check</string>
    <string name="print_init">Print Init</string>
    <string name="print_query_length">Print Query Length</string>
    <string name="print_three_lines">Print three Lines</string>
    <string name="print_black_block">Print Black Block</string>
    <string name="print_baidu_bill">Print Baidu Bill</string>
    <string name="print_meituan_bill">Print Meituan Bill</string>
    <string name="print_elemo_bill">Print Elemo Bill</string>
    <string name="print_koubei_bill">Print Koubei Bill</string>
    <string name="print_table">Print Table</string>
    <string name="print_multi_content_test">Print Multi Content Test</string>
    <string name="print_comprehensive_test">Print Comprehensive Test</string>
    <string name="print_sunmi_mode">SunMi Mode</string>
    <string name="print_Multithread_test">Print Multithread Test</string>
    <string name="loop_print_test">Loop Print Test</string>
    <string name="print_driver_error_test">Print Driver Error Test</string>
    <string name="print_wave_test">Print wave Test</string>
    <string name="motor_idling">Motor Idling 10000 Steps</string>
    <string name="print_commond_input">Print Commond Input</string>
    <string name="printer_run_paper_lines">Printer Run Paper</string>
    <string name="reset_motor_high_temp_status">Rest Moter Heigh Temp Status</string>
    <string name="out_of_paper">The printer is out of paper</string>
    <string name="exists_paper">The printer paper is ready</string>
    <string name="printer_is_working">The printer is working</string>
    <string name="printer_high_temp_alarm">Printer high temperature alarm</string>
    <string name="motor_high_temp_alarm">Motor high temperature alarm</string>
    <string name="printer_current_task_print_complete">The print task has been printed</string>
    <string name="printer_exception">Printer Exception</string>
    <string name="unknown_error">unknown status</string>
    <string name="switch_mode">Switch Mode</string>
    <string name="exit">Exit</string>
    <string name="login" translatable="false" tools:ignore="DuplicateDefinition">Sign In</string>
    <string name="register" translatable="false" tools:ignore="DuplicateDefinition">Sign Up</string>
    <string name="logout" translatable="false" tools:ignore="DuplicateDefinition">Sign Out</string>
    <string name="buy" translatable="false" tools:ignore="DuplicateDefinition">Buy</string>
    <string name="send" translatable="false" tools:ignore="DuplicateDefinition">Send</string>
    <string name="receive" translatable="false" tools:ignore="DuplicateDefinition">Receive</string>
    <string name="history" translatable="false" tools:ignore="DuplicateDefinition">History</string>
    <string name="qrcode" translatable="false" tools:ignore="DuplicateDefinition">Qr Code</string>
    <string name="settings" translatable="false" tools:ignore="DuplicateDefinition">Settings</string>
    <string name="print" translatable="false" tools:ignore="DuplicateDefinition">Test Print</string>
    <string name="email" translatable="false" tools:ignore="DuplicateDefinition">Email</string>
    <string name="fullname" translatable="false" tools:ignore="DuplicateDefinition">Fullname</string>
    <string name="passwd" translatable="false" tools:ignore="DuplicateDefinition">Password</string>
    <string name="fname" translatable="false" tools:ignore="DuplicateDefinition">Firstname</string>
    <string name="lname" translatable="false" tools:ignore="DuplicateDefinition">Lastname</string>
    <string name="walletAddress" translatable="false" tools:ignore="DuplicateDefinition">Wallet Address</string>
    <string name="cardNumber" translatable="false" tools:ignore="DuplicateDefinition">Card Number</string>
    <string name="cardDate" translatable="false" tools:ignore="DuplicateDefinition">MM/YY</string>
    <string name="cvv" translatable="false" tools:ignore="DuplicateDefinition">CVV</string>
    <string name="customer" translatable="false" tools:ignore="DuplicateDefinition">Customer Name</string>
    <string name="copyAddress" translatable="false" tools:ignore="DuplicateDefinition">Tap to copy wallet address</string>
    <string name="btc" translatable="false" tools:ignore="DuplicateDefinition">BTC</string>
    <string name="amount" translatable="false" tools:ignore="DuplicateDefinition">Amount (₦)</string>
    <string name="pay" translatable="false" tools:ignore="DuplicateDefinition">Pay</string>
    <string name="withdraw" translatable="false" tools:ignore="DuplicateDefinition">Withdraw</string>
</resources>
