<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gainsboro"
    tools:context=".WithdrawActivity">


    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">



        <EditText
            android:id="@+id/edt_fullname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="-0.25dp"
            android:background="@drawable/bg_buy_edittext"
            android:hint="@string/fullname"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            tools:ignore="LabelFor,NegativeMargin" />


        <EditText
            android:id="@+id/edt_mail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/bg_buy_edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            tools:ignore="LabelFor,NegativeMargin" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="160dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:layout_marginBottom="-0.25dp"
            android:background="@drawable/bg_buy_edittext"
            android:hint="@string/amount"
            android:inputType="phone"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            tools:ignore="LabelFor,NegativeMargin" />




        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="Enter PIN"
            android:textSize="14dp"
            android:textStyle="bold"/>


        <com.goodiebag.pinview.Pinview
            android:id="@+id/pin"
            app:pinBackground="@drawable/bg_buy_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pinWidth="40dp"
            app:pinHeight="40dp"
            app:pinLength="6"
            app:hint="*"
            app:cursorVisible="false"
            app:forceKeyboard="true"
            app:inputType="number"
            app:password="true"/>

    </LinearLayout>

    <Button
        android:id="@+id/pay_btn"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:background="@color/purple"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/pay" />

</RelativeLayout>

